fix navbar margin overlap on chrome (previous issue not related to branch)

--- a/app/src/sass/bootstrap/_navs.scss
+++ b/app/src/sass/bootstrap/_navs.scss
@@ -10,6 +10,7 @@
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
   list-style: none;
+  margin-right: 15px !important;
   @include clearfix;
 
   > li {
